<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-20dp"
    tools:layout_editor_absoluteY="-1dp"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/txtJogada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_field_explain"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="@id/gl_dir_botoes"
        app:layout_constraintStart_toStartOf="@id/gl_esq_botoes"
        app:layout_constraintTop_toTopOf="@id/gl_top_txt_combinacao" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPedra"
        app:layout_constraintEnd_toStartOf="@+id/gl_dir_txt_resultado"
        app:layout_constraintStart_toStartOf="@+id/gl_esq_txt_resultado" />

    <TextView
        android:id="@+id/txtCombinacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txt_field_combs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"

        app:layout_constraintEnd_toEndOf="@id/gl_dir_txt_resultado"
        app:layout_constraintStart_toStartOf="@id/gl_esq_txt_resultado"
        app:layout_constraintBottom_toTopOf="@id/gl_top_video_jogada"
        app:layout_constraintTop_toBottomOf="@+id/txtJogada" />

    <TextView
        android:id="@+id/txtPapel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_txt_PAPEL"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/imgPapel"
        app:layout_constraintStart_toStartOf="@id/imgPapel"
        app:layout_constraintEnd_toEndOf="@id/imgPapel"/>

    <TextView
        android:id="@+id/txtTesoura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_txt_TESOURA"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/imgTesoura"
        app:layout_constraintStart_toStartOf="@id/imgTesoura"
        app:layout_constraintEnd_toEndOf="@id/imgTesoura"
        />

    <TextView
        android:id="@+id/txtPedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_txt_PEDRA"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/imgPedra"
        app:layout_constraintStart_toStartOf="@id/imgPedra"
        app:layout_constraintEnd_toEndOf="@id/imgPedra" />

    <ImageView
        android:id="@+id/imgPapel"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="25dp"
        android:onClick="cliqueBtnPapel"
        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintStart_toEndOf="@id/imgPedra"
        app:layout_constraintEnd_toStartOf="@id/imgTesoura"
        app:layout_constraintTop_toBottomOf="@id/gl_bottom_video_jogada"
        app:layout_constraintBottom_toBottomOf="@id/txtResultado"
        app:srcCompat="@drawable/btn_papel" />

    <ImageView
        android:id="@+id/imgPedra"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="290dp"
        android:onClick="cliqueBtnPedra"
        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintStart_toStartOf="@id/gl_esq_botoes"
        app:layout_constraintEnd_toStartOf="@id/imgPapel"
        app:layout_constraintTop_toBottomOf="@id/gl_bottom_video_jogada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/btn_pedra" />

    <ImageView
        android:id="@+id/imgTesoura"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="290dp"
        android:onClick="cliqueBtnTesoura"
        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintStart_toEndOf="@id/imgPapel"
        app:layout_constraintEnd_toEndOf="@id/gl_dir_botoes"
        app:layout_constraintTop_toBottomOf="@id/gl_bottom_video_jogada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/btn_tesoura" />

    <TextView
        android:id="@+id/qtdeVitorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="59dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/letraV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qtdeEmpates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="59dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/letraE"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qtdeDerrotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="59dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/letraD"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/letraD"
        android:layout_width="25dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letra_d" />

    <ImageView
        android:id="@+id/letraE"
        android:layout_width="25dp"
        android:layout_height="44dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letra_e" />

    <ImageView
        android:id="@+id/letraV"
        android:layout_width="25dp"
        android:layout_height="44dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="50dp"
        android:onClick="exibirPontuacaoMaxima"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letra_v" />

    <TextView
        android:id="@+id/txtPontuacaoMax"
        android:layout_width="265dp"
        android:layout_height="70dp"
        android:layout_margin="50dp"
        android:background="@drawable/video_arredondado"
        android:backgroundTint="#AD8CF6"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoContainer" />

    <FrameLayout
        android:id="@+id/videoContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/video_arredondado"
        android:clipToOutline="true"
        android:visibility="invisible"

        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintDimensionRatio="20:15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_top_video_jogada"
        app:layout_constraintBottom_toTopOf="@id/gl_bottom_video_jogada" >

        <VideoView
            android:id="@+id/videoJogada"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtExibirRecorde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoText="false"
        android:text="@string/txt_mostrar_recorde"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/gl_dir_txt_resultado"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@id/gl_esq_txt_resultado"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_esq_txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_dir_txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_esq_botoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_dir_botoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom_video_jogada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_video_jogada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_txt_combinacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

</androidx.constraintlayout.widget.ConstraintLayout>